<resources>
    <string name="app_name">buy notes</string>
    <string name="simple_date_format">dd.MM.yyyy</string>
    <string name="notes_name">Название заметки</string>
    <string name="notes_date">Дата создания</string>
    <string name="notes_memo">Заметка</string>
    <string name="notes_list">Список покупок/дел </string>
    <string name="notes_list_done">Список покупок/дел (выполненных)</string>
    <string name="number_lines">3</string>
    <string name="action_add_new">Создать новый список</string>
    <string name="action_notes">Список заметок</string>
    <string name="action_feedback">Обратная связь</string>
    <string name="action_settings">Настройки</string>
    <string name="action_help">Помощь</string>
    <string name="action_header">Учетная запись</string>
    <string name="main_window">Главное окно программы</string>
    <string name="icon_on_toolbar">Иконка на тулбаре</string>
    <string name="action_del">Удалить</string>
    <string name="action_edit">Изменить</string>
    <string name="action_add">Добавить</string>
    <string name="action_transfer">Переместить</string>
    <string name="list_tool_name">Кофе</string>
    <string name="empty_note">Пустая заметка</string>
    <string name="action_save">Сохранить</string>
    <string name="action_edit_bad">Изменить(Добавить)</string>
    <string name="alert_title">Внимание</string>
    <string name="alert_message">Вы уверены, что хотите удалить элемент?</string>
    <string name="alert_positive_btn">Да</string>
    <string name="alert_negative_btn">Нет</string>
    <string name="alert_edit_text_hint">Введите название элемента</string>
</resources>