<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/act_add_new"
        android:title="@string/action_add_new"
        app:showAsAction="never">
        <menu>
            <group>android:id="@+id/group"</group>
        </menu>
    </item>
    <item
        android:id="@+id/act_feedback"
        android:icon="@drawable/ic_baseline_mail_24"
        android:title="@string/action_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/act_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/act_help"
        android:icon="@drawable/ic_baseline_help_24"
        android:title="@string/action_help"
        app:showAsAction="never" />
</menu>